cabal-version:   3.0
name:            putio-haskell
version:         0.1.0.0
license:         NONE
author:          Fred Strauss
maintainer:      fred@strider.co.za
build-type:      Simple

common warnings
    ghc-options: -Wall

library
  hs-source-dirs: src
  build-depends:  base, aeson, http-client, http-client-tls, mtl, servant, servant-client, text, time
  exposed-modules:
      Putio
      Putio.Account
      Putio.API
      Putio.API.Account
      Putio.API.File
      Putio.API.Transfer
      Putio.Client
      Putio.Core
      Putio.Data.Account
      Putio.Data.File
      Putio.Data.Transfer
      Putio.Data.Wrap
      Putio.File
      Putio.Transfer
